--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,19 @@ body {
 ::-webkit-scrollbar-thumb {
   @apply bg-surface rounded-full border border-gray-700;
 }
+
+@layer utilities {
+  .preserve-3d {
+    transform-style: preserve-3d;
+  }
+  .backface-hidden {
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden; /* Para Safari/Chrome */
+  }
+  .perspective-1000 {
+    perspective: 1000px;
+  }
+  .rotate-y-180 {
+    transform: rotateY(180deg);
+  }
+}
